--- a/programs/liqnft-market/Cargo.toml
+++ b/programs/liqnft-market/Cargo.toml
@@ -15,4 +15,10 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.18.2"
+anchor-lang = {version = "0.18.2"}
+anchor-spl = {version = "0.18.2"}
+spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
+strum_macros = "0.23.1"
+spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
+spl-token-metadata = {version="0.0.1", features = ["no-entrypoint"]}
+metaplex-token-metadata = {version="0.0.1", features = ["no-entrypoint"]}
